--- a/notebooks/20200630/20200630 - R1.9 Continued Lockdown Scenarios Vectorized Model and Individual Level Logs Analysis.ipynb
+++ b/notebooks/20200630/20200630 - R1.9 Continued Lockdown Scenarios Vectorized Model and Individual Level Logs Analysis.ipynb
@@ -1200,9 +1200,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wb-nlp",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "wb-nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1214,7 +1214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
