Friday changes 12 feb

--- a/notebooks/correcting_line_list.ipynb
+++ b/notebooks/correcting_line_list.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "numeric-highlight",
    "metadata": {},
    "outputs": [],
@@ -118,6 +118,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "superior-clause",
+   "metadata": {},
+   "source": [
+    "## creating pickle file with the d_ in front "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "falling-attachment",
@@ -131,9 +139,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "national-circular",
+   "metadata": {},
+   "source": [
+    "## creating pickle file without d infront "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "imperial-affiliation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_list = {'32': 5, '10': 3, '3': 1, '1': 28, '26': 8, '17': 5, '15': 2, '5': 2, '33': 6, '34': 2, '54': 2, '2': 162, '41': 3, '28': 4, '29': 1, '57': 1, '23': 3, '6': 3, '19': 17, '36': 37, '30': 3, '14': 1, '21': 2, '7': 2, '8': 2, '4': 1, '9': 1, '16': 1}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "northern-legend",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle_on = open (\"../data/preprocessed/line_list/line_list.pickle\", \"wb\")\n",
+    "pickle.dump(l_list, pickle_on)\n",
+    "pickle_on.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "historical-reliance",
+   "metadata": {},
+   "source": [
+    "# Take a look at one of the pickle output values in case it has more than the logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "historical-oriental",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unpickle the line list and view it \n",
+    "\n",
+    "pickle_off = open(\"../data/logs/model_dump_file_UnmitigatedScenario_rename 0112.pickle\", \"rb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "proof-organizer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle_output = pickle.load(pickle_off)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "confidential-implement",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<covid19_abm.scenario_models.UnmitigatedScenario object at 0x1154fc820>\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(pickle_output)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imperial-affiliation",
+   "id": "seeing-convert",
    "metadata": {},
    "outputs": [],
    "source": []
