changing 'in school' to 'current students' throughout

--- a/notebooks/correcting_line_list.ipynb
+++ b/notebooks/correcting_line_list.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "numeric-highlight",
    "metadata": {},
    "outputs": [],
@@ -109,17 +109,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "lasting-ranch",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['d_32', 'd_10', 'd_3', 'd_1', 'd_26', 'd_17', 'd_15', 'd_5', 'd_33',\n",
+       "       'd_34', 'd_54', 'd_2', 'd_41', 'd_28', 'd_29', 'd_57', 'd_23', 'd_6',\n",
+       "       'd_19', 'd_36', 'd_30', 'd_14', 'd_21', 'd_7', 'd_8', 'd_4', 'd_9',\n",
+       "       'd_16'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "l_list = {'d_32': 5, 'd_10': 3, 'd_3': 1, 'd_1': 28, 'd_26': 8, 'd_17': 5, 'd_15': 2, 'd_5': 2, 'd_33': 6, 'd_34': 2, 'd_54': 2, 'd_2': 162, 'd_41': 3, 'd_28': 4, 'd_29': 1, 'd_57': 1, 'd_23': 3, 'd_6': 3, 'd_19': 17, 'd_36': 37, 'd_30': 3, 'd_14': 1, 'd_21': 2, 'd_7': 2, 'd_8': 2, 'd_4': 1, 'd_9': 1, 'd_16': 1}\n"
+    "import pandas as pd\n",
+    "l_list = {'d_32': 5, 'd_10': 3, 'd_3': 1, 'd_1': 28, 'd_26': 8, 'd_17': 5, 'd_15': 2, 'd_5': 2, 'd_33': 6, 'd_34': 2, 'd_54': 2, 'd_2': 162, 'd_41': 3, 'd_28': 4, 'd_29': 1, 'd_57': 1, 'd_23': 3, 'd_6': 3, 'd_19': 17, 'd_36': 37, 'd_30': 3, 'd_14': 1, 'd_21': 2, 'd_7': 2, 'd_8': 2, 'd_4': 1, 'd_9': 1, 'd_16': 1}\n",
+    "series_llist = pd.Series(l_list)\n",
+    "series_llist.index"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "superior-clause",
+   "id": "liquid-nutrition",
    "metadata": {},
    "source": [
     "## creating pickle file with the d_ in front "
@@ -127,20 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "falling-attachment",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "pickle_on = open (\"../data/preprocessed/line_list/d_line_list.pickle\", \"wb\")\n",
-    "pickle.dump(l_list, pickle_on)\n",
+    "pickle.dump(series_llist, pickle_on)\n",
     "pickle_on.close()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "national-circular",
+   "id": "regulation-foundation",
    "metadata": {},
    "source": [
     "## creating pickle file without d infront "
@@ -148,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "imperial-affiliation",
    "metadata": {},
    "outputs": [],
@@ -159,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "northern-legend",
+   "id": "organic-prediction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "historical-reliance",
+   "id": "square-cleveland",
    "metadata": {},
    "source": [
     "# Take a look at one of the pickle output values in case it has more than the logs"
@@ -179,20 +197,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "historical-oriental",
+   "execution_count": 16,
+   "id": "dutch-layout",
    "metadata": {},
    "outputs": [],
    "source": [
     "# unpickle the line list and view it \n",
     "\n",
-    "pickle_off = open(\"../data/logs/model_dump_file_UnmitigatedScenario_rename 0112.pickle\", \"rb\")"
+    "pickle_off = open(\"../data/logs/model_dump_file_test_5perc.pickle\", \"rb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "proof-organizer",
+   "execution_count": 17,
+   "id": "compact-programmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,26 +219,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "confidential-implement",
+   "execution_count": 18,
+   "id": "chinese-creativity",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<covid19_abm.scenario_models.UnmitigatedScenario object at 0x1154fc820>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<covid19_abm.scenario_models.DynamicPhase1GovernmentOpenSchoolsScenario at 0x1044d3eb0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pprint(pickle_output)"
+    "pickle_output"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seeing-convert",
+   "id": "under-metadata",
    "metadata": {},
    "outputs": [],
    "source": []
