--- a/notebooks/Parameter Exploration.ipynb
+++ b/notebooks/Parameter Exploration.ipynb
@@ -22,14 +22,8 @@
    "outputs": [],
    "source": [
     "def processModelOutput(filename):\n",
-    "    \n",
     "    r_data = pd.read_csv(filename, sep='\\t')\n",
     "    r_data['districtId'] = [int(str(x).split('_')[1]) for x in r_data[\"myId\"]]\n",
-    "\n",
-    "#    r_agg = r_data.groupby('districtId').agg({'metric_died_count': 'max', 'metric_new_hospitalized': 'sum', \n",
-    "#                                    'metric_new_critical': 'sum', 'metric_new_cases_asympt': 'sum',\n",
-    "#                                    'metric_new_cases_sympt': 'sum'})\n",
-    "    \n",
     "    return {'results': r_data}\n",
     "\n",
     "def WorldBankMASONmodel(rawseed):\n",
@@ -50,24 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myResult = WorldBankMASONmodel(12345)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename = \"exportMe1109.txt\"\n",
-    "r_data = pd.read_csv(filename, sep='\\t')\n",
-    "r_data['districtId'] = [int(str(x).split('_')[1]) for x in r_data[\"myId\"]]\n",
-    "#r_agg = r_data.groupby('districtId').agg({'metric_died_count': 'max', 'metric_new_hospitalized': 'sum', \n",
-    "#                                    'metric_new_critical': 'sum', 'metric_new_cases_asympt': 'sum',\n",
-    "#                                    'metric_new_cases_sympt': 'sum'})\n",
-    "#r_agg\n",
-    "#myResult\n",
-    "r_data"
+    "#myResult = WorldBankMASONmodel(12345) # testing"
    ]
   },
   {
