--- a/notebooks/Parameter_Exploration_Sa.ipynb
+++ b/notebooks/Parameter_Exploration_Sa.ipynb
@@ -37,13 +37,14 @@
     "    r_data['districtId'] = [int(str(x).split('_')[1]) for x in r_data[\"myId\"]]\n",
     "    return {'results': r_data}\n",
     "\n",
-    "def WorldBankMASONmodel(rawseed):\n",
+    "def WorldBankMASONmodel(beta):\n",
     "    \n",
-    "    seed = str(int(rawseed))\n",
+    "#     seed = str(int(beta))\n",
+    "    seed = \"15092021\"\n",
     "    #dataDir = \"/Users/swise/workspace/worldbank/Disease-Modelling-SSA/data/\"\n",
     "    dataDir = \"/home/wb488473/Disease-Modelling-SSA/data/\"\n",
     "    numDays = 30 * 6\n",
-    "    beta = 0.03 #0.016\n",
+    "#     beta = 0.03 #0.016\n",
     "    exportFilename = \"exportMe\" + seed + \".txt\"\n",
     "    subprocess.call(['java', '-Xms20G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), dataDir, str(beta), seed, exportFilename])\n",
     "    # Sophie upped the -Xms to 20G from 6GB\n",
@@ -165,7 +166,8 @@
     "model = Model('WorldBankMason', function=WorldBankMASONmodel)  # instantiate the model\n",
     "\n",
     "# specify uncertainties\n",
-    "model.uncertainties = [RealParameter('rawseed', 1, 10000)]\n",
+    "#model.uncertainties = [RealParameter('rawseed', 1, 10000)]\n",
+    "model.uncertainties = [RealParameter('beta', 0.001, 1)]\n",
     "\n",
     "#model.constants = [\n",
     "#    Constant('dataDir', \"/Users/swise/workspace/worldbank/Disease-Modelling-SSA/data/\"),\n",
@@ -184,7 +186,7 @@
     "#    TimeSeriesOutcome('metric_new_cases_sympt')\n",
     "]\n",
     "\n",
-    "results = perform_experiments(model, 10)"
+    "results = perform_experiments(model, 5)"
    ]
   },
   {
@@ -213,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
