resolved merge conflict

--- a/notebooks/Verification of Model Functionality.ipynb
+++ b/notebooks/Verification of Model Functionality.ipynb
@@ -19,12 +19,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processModelOutput(filename):\n",
+    "    r_data = pd.read_csv(filename, sep='\\t')\n",
+    "    r_data['districtId'] = [int(str(x).split('_')[1]) for x in r_data[\"myId\"]]\n",
+    "    return {'results': r_data}\n",
+    "\n",
+    "def WorldBankMASONmodel(seed, paramfile, beta):\n",
+    "    \n",
+    "    dataDir = \"/home/wb488473/Disease-Modelling-SSA/data/\"\n",
+    "    numDays = 30 * 6\n",
+    "    exportFilename = \"exportMe\" + seed + \"_\" + beta + \".txt\"\n",
+    "    subprocess.call(['java', '-Xms20G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), dataDir, str(beta), seed, exportFilename])\n",
+    "    # Sophie upped the -Xms to 20G from 6GB\n",
+    "    return processModelOutput(exportFilename)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Undifferentiated base case\n",
     "\n",
-    "people in one big pile interacting amorphously (no status, no bubbles, no movement)\n"
+    "Individuals are created without distinct statuses and their social bubbles are set to be the size of the entire community. There is a single district in which each agent is initialised and movement between districts (being meaningless) is zeroed out. Thus, status, social bubbles, and space are all excluded from this scenario."
    ]
   },
   {
