--- a/notebooks/Verification of Model Functionality.ipynb
+++ b/notebooks/Verification of Model Functionality.ipynb
@@ -24,10 +24,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime, timedelta\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import pylab as plt\n",
+    "from os.path import isfile, join\n",
+    "from glob import glob\n",
+    "\n",
+    "import seaborn as sns\n",
+    "sns.set(style=\"darkgrid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def processModelOutput(filename):\n",
     "    r_data = pd.read_csv(filename, sep='\\t')\n",
     "    r_data['districtId'] = [int(str(x).split('_')[1]) for x in r_data[\"myId\"]]\n",
     "    return {'results': r_data}\n",
+    "\n",
+    "def findROFInstance():\n",
+    "    # total number of individuals infected by the introduction of an infectious person\n",
+    "    return beta * n\n",
     "\n",
     "def WorldBankMASONmodel(seed, paramfile, beta):\n",
     "    \n",
@@ -40,12 +64,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Undifferentiated base case\n",
     "\n",
-    "Individuals are created without distinct statuses and their social bubbles are set to be the size of the entire community. There is a single district in which each agent is initialised and movement between districts (being meaningless) is zeroed out. Thus, status, social bubbles, and space are all excluded from this scenario."
+    "Individuals are created without distinct statuses and their social bubbles are set to be the size of the entire community. There is a single district in which each agent is initialised and movement between districts (being meaningless) is zeroed out. Thus, status, social bubbles, and space are all excluded from this scenario.\n",
+    "\n",
+    "The data directory associated with this case is in its own section, under the directory **data/verification/** and the specific set of parameters is as given in the file **data/verification/params_basecase.txt**. In particular:\n",
+    "\n",
+    "* the census file has all economic statuses set to the value \"Default\" and all locations for home and work set to an imaginary \"District 1\"\n",
+    "* the daily transitions files are both set to 100% chance of moving from District 1 to District 1.\n",
+    "* mobility rates do not decrease after a lockdown...\n",
+    "* the lockdown file is empty of scheduled lockdowns, however, for belt-and-bracers insurance!\n",
+    "\n",
+    "The infection parameters are the defaults as seen in the config/covasim_infect_transitions.txt\n",
+    "\n",
+    "The files to vary are therefore the following:\n",
+    "* **numWeeklyInteractionsByStatus.txt**: a record of how many interactions agents with the \"Default\" status should have per week\n",
+    "* **lineList_10.txt**: the infections to seed in the single district.\n",
+    "\n",
+    "An exploration of these is given below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the simulation with the given param file"
    ]
   },
   {
@@ -53,6 +108,17 @@
    "metadata": {},
    "source": [
     "#### Cases over time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.relplot(x=\"time\", y=\"scaled_sim_cases\", kind=\"line\", hue=\"beta\", ci=None, data=nat_level, height=8, palette = \"BuPu\").set(title=\"Case projections of 10 beta runs - after scaling\")\n",
+    "g.fig.autofmt_xdate()\n",
+    "g.savefig('../data/output/plots/sim_cases_scaled_10betaruns.png')"
    ]
   },
   {
@@ -67,13 +133,6 @@
    "metadata": {},
    "source": [
     "#### Measuring R"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Constraint-specific?"
    ]
   },
   {
