--- a/notebooks/Sensitivity_analysis_beta.ipynb
+++ b/notebooks/Sensitivity_analysis_beta.ipynb
@@ -1386,7 +1386,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1400,7 +1400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
