implementing perfect mixing

--- a/notebooks/Verification of Model Functionality.ipynb
+++ b/notebooks/Verification of Model Functionality.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,9 @@
     "import pylab as plt\n",
     "from os.path import isfile, join\n",
     "from glob import glob\n",
+    "import subprocess\n",
+    "import re\n",
+    "\n",
     "\n",
     "import seaborn as sns\n",
     "sns.set(style=\"darkgrid\")"
@@ -87,11 +90,37 @@
     "\n",
     "The infection parameters are the defaults as seen in the config/covasim_infect_transitions.txt\n",
     "\n",
-    "The files to vary are therefore the following:\n",
+    "The data to vary are therefore the following:\n",
     "* **numWeeklyInteractionsByStatus.txt**: a record of how many interactions agents with the \"Default\" status should have per week\n",
     "* **lineList_10.txt**: the infections to seed in the single district.\n",
     "\n",
     "An exploration of these is given below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* initialise with 20 cases for both bubbles and perfect mixing\n",
+    "* comparison: .03 and .3 betas\n",
+    "* population sizes: 10% versus this 5%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the simulation with the given param file\n",
+    "\n",
+    "def WorldBankMASONmodel(seed, paramFile, beta):\n",
+    "    \n",
+    "    dataDir = \"/Users/swise/workspace/worldbank/Disease-Modelling-SSA/data/verification/\"\n",
+    "    numDays = 30 * 6\n",
+    "    exportFilename = dataDir + \"output/exportPerfectMixing_\" + str(seed) + \"_\" + str(beta) + \".txt\"\n",
+    "    subprocess.call(['java', '-Xms6G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), dataDir, str(beta), str(seed), exportFilename, paramFile])\n",
+    "    print(\"written to...\" + exportFilename)"
    ]
   },
   {
@@ -100,7 +129,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run the simulation with the given param file"
+    "paramFilename = \"/Users/swise/workspace/worldbank/Disease-Modelling-SSA/data/verification/params_basecase.txt\"\n",
+    "\n",
+    "for j in [.1]:\n",
+    "    for i in range(10):\n",
+    "        WorldBankMASONmodel(i, paramFilename, j)"
    ]
   },
   {
@@ -112,14 +145,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def plotMetric(files, prefix, suffix, metric, symbol, alpha):\n",
+    "    myAvgLine = []\n",
+    "    index = 0\n",
+    "    template = \"^\" + prefix + \".*\" + suffix + \"$\"\n",
+    "\n",
+    "    for f in files:\n",
+    "\n",
+    "        if(re.search(template, f) != None): # f.startswith(prefix) and \n",
+    "            r_data = pd.read_csv(path + f, sep='\\t')\n",
+    "            totcases = r_data[metric]\n",
+    "            if len(myAvgLine) == 0:\n",
+    "                myAvgLine = totcases\n",
+    "            else:\n",
+    "                myAvgLine += totcases\n",
+    "            \n",
+    "            # plot it\n",
+    "            plt.plot(r_data[\"time\"][1:], totcases[1:], symbol, alpha=alpha)\n",
+    "            index += 1\n",
+    "    return {\"myLine\": myAvgLine/index, \"myTime\": r_data[\"time\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = sns.relplot(x=\"time\", y=\"scaled_sim_cases\", kind=\"line\", hue=\"beta\", ci=None, data=nat_level, height=8, palette = \"BuPu\").set(title=\"Case projections of 10 beta runs - after scaling\")\n",
-    "g.fig.autofmt_xdate()\n",
-    "g.savefig('../data/output/plots/sim_cases_scaled_10betaruns.png')"
+    "path = \"/Users/swise/workspace/worldbank/Disease-Modelling-SSA/data/verification/output/\"\n",
+    "files = os.listdir(path)\n",
+    "\n",
+    "line1 = plotMetric(files, \"exportMe\", \"0.03_.txt\", \"metric_new_cases_sympt\", 'r-', 0.15)\n",
+    "line2 = plotMetric(files, \"exportPerfect\", \"0.03_.txt\", \"metric_new_cases_sympt\", 'b-', 0.15)\n",
+    "line3 = plotMetric(files, \"exportPerfect\", \"0.03_.txt\", \"metric_new_cases_sympt\", 'g-', 0.15)\n",
+    "\n",
+    "plt.plot(line1[\"myTime\"][1:], line1['myLine'][1:], 'r', label=\"Bubbles - .03 Beta\")\n",
+    "plt.plot(line2[\"myTime\"][1:], line2['myLine'][1:], 'b', label=\"Perfect Mixing - .03 Beta\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.savefig(path + \"comparisonOfCases.png\", dpi=300)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#line3 = plotMetric(files, \"exportPerfect\", \"0.3.txt\", \"metric_new_cases_sympt\", 'b-', 0.15)\n",
+    "#plt.plot(line3[\"myTime\"][1:], line3['myLine'][1:], 'r', label=\"Perfect Mixing - .30 Beta\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -127,6 +225,13 @@
    "source": [
     "#### Deaths over time"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
