--- a/notebooks/mobility_matrices.ipynb
+++ b/notebooks/mobility_matrices.ipynb
@@ -278,6 +278,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's find out the average level of mobility by district \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
    "outputs": [
@@ -1156,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
