modification to interaction patterns

--- a/notebooks/Verification of Model Functionality.ipynb
+++ b/notebooks/Verification of Model Functionality.ipynb
@@ -7,7 +7,7 @@
     "# Significant aspects of model construction\n",
     "\n",
     "* econ status\n",
-    "* bubbles\n",
+    "* ~bubbles~\n",
     "* spatiality\n",
     "* mobility\n",
     "\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,18 +60,16 @@
     "    \n",
     "    dataDir = \"/home/wb488473/Disease-Modelling-SSA/data/\"\n",
     "    numDays = 30 * 6\n",
-    "    exportFilename = \"exportMe\" + seed + \"_\" + beta + \".txt\"\n",
-    "    subprocess.call(['java', '-Xms20G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), dataDir, str(beta), seed, exportFilename])\n",
+    "    \n",
+    "    exportFilename = \"exportDailyMetrics_\" + seed + \"_\" + beta + \".txt\"\n",
+    "    exportInfectionsFilename = \"exportInfections_\" + seed + \"_\" + beta + \".txt\"\n",
+    "    \n",
+    "    subprocess.call(['java', '-Xms20G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), \n",
+    "                     dataDir, str(beta), seed, exportFilename, paramfile, exportInfectionsFilename])\n",
+    "    \n",
     "    # Sophie upped the -Xms to 20G from 6GB\n",
     "    return processModelOutput(exportFilename)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -79,9 +77,9 @@
    "source": [
     "## Undifferentiated base case\n",
     "\n",
-    "Individuals are created without distinct statuses and their social bubbles are set to be the size of the entire community. There is a single district in which each agent is initialised and movement between districts (being meaningless) is zeroed out. Thus, status, social bubbles, and space are all excluded from this scenario.\n",
+    "Individuals are created without distinct statuses and their interaction is perfect mixing with the entire community. There is a single district in which each agent is initialised and movement between districts (being meaningless) is zeroed out. Thus, status, social groups, and space are all excluded from this scenario.\n",
     "\n",
-    "The data directory associated with this case is in its own section, under the directory **data/verification/** and the specific set of parameters is as given in the file **data/verification/params_basecase.txt**. In particular:\n",
+    "The data directory associated with this case is inunder the directory **data/verification/** and the specific set of parameters is as given in the file **data/verification/params_default1Dist.txt**. In particular:\n",
     "\n",
     "* the census file has all economic statuses set to the value \"Default\" and all locations for home and work set to an imaginary \"District 1\"\n",
     "* the daily transitions files are both set to 100% chance of moving from District 1 to District 1.\n",
@@ -91,8 +89,8 @@
     "The infection parameters are the defaults as seen in the config/covasim_infect_transitions.txt\n",
     "\n",
     "The data to vary are therefore the following:\n",
-    "* **numWeeklyInteractionsByStatus.txt**: a record of how many interactions agents with the \"Default\" status should have per week\n",
-    "* **lineList_10.txt**: the infections to seed in the single district.\n",
+    "* **numWeeklyInteractionsByStatus_default.txt**: a record of how many interactions agents with the \"Default\" status should have per week\n",
+    "* **lineList_5Perc_singleDist.txt**: the infections to seed in the single district.\n",
     "\n",
     "An exploration of these is given below."
    ]
@@ -101,40 +99,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* initialise with 20 cases for both bubbles and perfect mixing\n",
+    "* initialise with 20 cases\n",
     "* comparison: .03 and .3 betas\n",
     "* population sizes: 10% versus this 5%"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# run the simulation with the given param file\n",
-    "\n",
-    "def WorldBankMASONmodel(seed, paramFile, beta):\n",
-    "    \n",
-    "    dataDir = \"/Users/swise/workspace/worldbank/Disease-Modelling-SSA/data/verification/\"\n",
-    "    numDays = 30 * 6\n",
-    "    exportFilename = dataDir + \"output/testing_30bubbles_weekdayWeekendSame_\" + str(seed) + \"_\" + str(beta) + \".txt\"\n",
-    "    subprocess.call(['java', '-Xms10G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), dataDir, str(beta), str(seed), exportFilename, paramFile])\n",
-    "    print(\"written to...\" + exportFilename)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SCENARIOS \n",
+    "Running the scenarios.\n",
     "\n",
-    "5% (line list of 20): beta .1\n",
-    "\tbubbles (30 + 60)\n",
-    "\tno bubbles\n",
-    "20% (line list of 80): beta .1\n",
-    "\tbubbles (30 + 60)\n",
-    "\tno bubbles\n"
+    "(WANT MORE SCENARIOS?? Just add more hateful loops! Or change betas to pop size, etc! Add new param files! Go hog wild!!!)"
    ]
   },
   {
@@ -151,47 +127,13 @@
     }
    ],
    "source": [
-    "# run the simulation with the given param file\n",
-    "\n",
-    "def WorldBankMASONmodel(scenario, seed, paramFile, beta):\n",
-    "    \n",
-    "    dataDir = \"../data/verification/output/\"\n",
-    "    numDays = 30 * 6\n",
-    "    exportFilename = dataDir + scenario + \"_\" + str(seed) + \"_\" + str(beta) + \".txt\"\n",
-    "    subprocess.call(['java', '-Xms10G', '-jar', '../java/WorldBankCovid19/libs/WB_covid19ABM.jar', str(numDays), dataDir, str(beta), str(seed), exportFilename, paramFile])\n",
-    "    print(\"written to...\" + exportFilename)\n",
-    "    \n",
-    "\n",
-    "paramsPerScenario = [\"../data/verification/params_5perc_bubbles_30.txt\", \"../data/verification/params_5perc_bubbles_60.txt\", \"../data/verification/params_5perc_perfectMixing.txt\", \"../data/verification/params_20perc_bubbles_30.txt\", \"../data/verification/params_20perc_bubbles_60.txt\", \"../data/verification/params_20perc_perfectMixing.txt\"]    \n",
+    "paramsPerScenario = [\"../data/verification/params_default1Dist\"]   \n",
+    "betasPerScenario = [0.03, 0.3]\n",
     "\n",
     "for paramsFile in paramsPerScenario:\n",
-    "    for i in range(10):\n",
-    "        WorldBankMASONmodel(\"sweep_5per_bubbles30\", i, paramsFile, .1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "WorldBankMASONmodel() missing 1 required positional argument: 'beta'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-184-cbf4f937bbca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m.1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mWorldBankMASONmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparamFilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: WorldBankMASONmodel() missing 1 required positional argument: 'beta'"
-     ]
-    }
-   ],
-   "source": [
-    "paramFilename = \"/Users/swise/workspace/worldbank/Disease-Modelling-SSA/data/verification/params_basecase.txt\"\n",
-    "\n",
-    "for j in [.1]:\n",
-    "    for i in range(10):\n",
-    "        WorldBankMASONmodel(i, paramFilename, j)"
+    "    for myBeta in betasPerScenario:\n",
+    "        for i in range(10):\n",
+    "            WorldBankMASONmodel(\"sweep_default1Dist_betaComparison_\", i, paramsFile, myBeta)"
    ]
   },
   {
@@ -241,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bubbles versus Perfect Mixing under different Beta regimes"
+    "## HERE BE CODE FORMERLY USED FOR BUBBLES - CANNABALISE ACCORDINGLY"
    ]
   },
   {
@@ -988,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
